# cg-lab-1

./: CMakeLists.txt
